--- a/MvcPruebaAuroraCochesAWS/appsettings.json
+++ b/MvcPruebaAuroraCochesAWS/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaAurora": "server=pruebas-aurora-mysql-igl.cluster-ro-cegosaf39hbr.us-east-1.rds.amazonaws.com;port=3306;user id=adminsql;database=Coches;password=Admin123"
+    "CadenaAurora": "server=awssqlivan.ctkkehbsa6ma.us-east-1.rds.amazonaws.com;port=3306;user id=adminsql;database=Coches;password=Admin123"
+  },
+  "AWS": {
+    "BucketName": "bucket-prueba-aurora-coches"
   }
 }
