--- a/MvcPruebaAuroraCochesAWS/appsettings.json
+++ b/MvcPruebaAuroraCochesAWS/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaAurora": "server=awssqlivan.ctkkehbsa6ma.us-east-1.rds.amazonaws.com;port=3306;user id=adminsql;database=Coches;password=Admin123"
+    "CadenaAurora": "server=*****;port=3306;user id=*;database=*;password=***"
   },
   "AWS": {
     "BucketName": "bucket-prueba-aurora-coches"
